fix lidt af hvert

--- a/src/components/Card_guidet.astro
+++ b/src/components/Card_guidet.astro
@@ -6,3 +6,10 @@ const { text } = Astro.props;
   <slot />
   <p>{text}</p>
 </article>
+
+<style>
+  p {
+    margin-top: 0;
+    width: 300px;
+  }
+</style>
