--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -1,59 +1,34 @@
 ---
-import "../style/style.css"
-import Arrow from "../components/Arrow.astro"
+import "../style/style.css";
+import Arrow from "../components/Arrow.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
     <title>Program</title>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
-        <section class="grid_1-1">
-        <div class="propic">
-            <img src="../../public/img/The-Wave.webp"" alt="Lysværk">
-        <h3>LYSVÆRKER</h3>
-            <arrow /> <a href=""></a>
-        </div>
-        <div class="propic">
-            <img src="../../public/img/Jellyfish.webp" alt="Events">
-            <a href="Events.astro"><h3>EVENTS</h3></a>
-            <arrow /> <a href="art.astro"></a>
-        </div>
+    <h1>PROGRAM</h1>
+    <h3>ALLE LYSVÆRKER OG EVENTS D. 2. FEB – 25. FEB 2024</h3>
+    <section class="grid_1-1">
+      <div class="propic">
+        <img src="../../public/img/The-Wave.webp" " alt="Lysværk" />
+        <a href="/art"><h3>LYSVÆRKER</h3> </a>
+      </div>
+      <div class="propic">
+        <img src="../../public/img/Jellyfish.webp" alt="Events" />
+        <a href="/events"><h3>EVENTS</h3> </a>
+        <a href="art.astro"></a>
+      </div>
     </section>
-    </main>
-    <footer></footer>
-</body>
+  </body>
+  <footer>
+    <Footer />
+  </footer>
 </html>
-
-<style>
-
-.grid_1-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin: 20px;
-    padding-left: 19%;
-}
-
-.propic {
-    justify-content: center;
-    border-radius: 10px;
-    
-}
-
-.img propic {
-    width: 100%;
-    height: 100%;object-fit: cover;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-}
-h3 propic {
-    text-align: center;
-padding: 20px;
-}
-</style>
->>>>>>> program
