--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -13,7 +13,7 @@ import Footer from "../components/Footer.astro";
     <title>Program</title>
   </head>
   <body>
-    <header></header>
+    <header><Navigation /></header>
     <h1>PROGRAM</h1>
     <h3>ALLE LYSVÆRKER OG EVENTS D. 2. FEB – 25. FEB 2024</h3>
     <section class="grid_1-1">
