--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -3,6 +3,7 @@ import "../style/style.css";
 import Card_guidet from "../components/Card_guidet.astro";
 import Rute from "../components/Rute.astro";
 import Footer from "../components/Footer.astro";
+import Navigation from "../components/Navigation.astro";
 ---
 
 <html lang="da">
@@ -14,6 +15,7 @@ import Footer from "../components/Footer.astro";
     <title>Ruter og Ture</title>
   </head>
   <body>
+    <header><Navigation /></header>
     <main>
       <h1>RUTER OG TURE</h1>
       <h3>VÆLG EN AF VORES GÅ- OG CYKELRUTER</h3>
