fix småting med nav

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div><a href="/index"><img src="/img/clf_logo.webp" alt="" /></a></div>
+<div><a href="/"><img src="/img/clf_logo.webp" alt="" /></a></div>
 <nav id="navigation">
   <div id="udenmenu">
     <p>2/2-25/2 2024</p>
