--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -25,7 +25,7 @@ console.log("test", data);
   </head>
   <body>
     <Navigation />
-    <h1>Program</h1>
+    <h1>PROGRAM</h1>
     <main>
       <div id="event">
         {
@@ -37,7 +37,7 @@ console.log("test", data);
                 Av={event.Av}
                 Lokation={event.Lokation}
               />
-              <img class="pil" src="/IMG/pil.webp" alt="pil" />
+              <img class="pil" src="/img/pil.webp" alt="pil" width="70px" />
             </>
           ))
         }
