--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -2,6 +2,7 @@
 import "../style/style.css";
 import Arrow from "../components/Arrow.astro";
 import Footer from "../components/Footer.astro";
+import Navigation from "../components/Navigation.astro";
 ---
 
 <html lang="en">
@@ -27,6 +28,7 @@ import Footer from "../components/Footer.astro";
         <a href="art.astro"></a>
       </div>
     </section>
+    <script src="/main.js" is:inline></script>
   </body>
   <footer>
     <Footer />
