--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,7 +22,7 @@ body {
   background: #010d25;
   background-image:url(/public/img/baggrundimgab.webp);
   background-size: 100%;
-  margin: 3%;
+
 }
 
 h1 {
@@ -32,6 +32,7 @@ h1 {
   font-family: RobB;
   line-height: 2;
   margin-bottom: 0;
+  margin-left: 20px;
 }
 
 h2 {
@@ -42,6 +43,7 @@ h2 {
   -webkit-text-fill-color: transparent;
   font-size: 30px;
   margin-bottom: 10px;
+  margin-left: 20px;
 
 }
 
@@ -51,6 +53,7 @@ h3 {
   font-family: RobL;
   font-size: 15px;
   margin-top: 0;
+  margin-left: 20px;
 }
 
 h4 {
@@ -59,6 +62,7 @@ h4 {
   font-family: RobL;
   font-size: 25px;
   margin-top: 0;
+  margin-left: 20px;
 }
 
 p {
