--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -45,30 +45,30 @@ import Navigation from "../components/Navigation.astro";
       <h3>BOOK EN AF VORES GUIDEDE TURE</h3>
       <section class="gridguide">
         <Card_guidet text="Guidet tur til fods under Copenhagen Light Festival"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet text="Guided BUS til alle distrikter af CLF"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet text="Liveguidet kanalrundfart langs kunstværkerne"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet
           text="Guidet tur til fods med Frederik Lindskov og FOF Nordsjælland"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet text="Guidet tur til fods under Copenhagen Light Festival"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet text="Guided BUS til alle distrikter af CLF"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet text="Liveguidet kanalrundfart langs kunstværkerne"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
         <Card_guidet
           text="Guidet tur til fods med Frederik Lindskov og FOF Nordsjælland"
-          ><img src="/public/img/kunst.webp" alt="xxx" /></Card_guidet
+          ><img src="/img/kunst.webp" alt="xxx" /></Card_guidet
         >
       </section>
     </main>
