--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -19,11 +19,11 @@ import Navigation from "../components/Navigation.astro";
     <h3>ALLE LYSVÆRKER OG EVENTS D. 2. FEB – 25. FEB 2024</h3>
     <section class="grid_1-1">
       <div class="propic">
-        <img src="../../public/img/The-Wave.webp" " alt="Lysværk" />
+        <img src="../img/The-Wave.webp" " alt="Lysværk" />
         <a href="/art"><h3>LYSVÆRKER</h3> </a>
       </div>
       <div class="propic">
-        <img src="../../public/img/Jellyfish.webp" alt="Events" />
+        <img src="../img/Jellyfish.webp" alt="Events" />
         <a href="/events"><h3>EVENTS</h3> </a>
         <a href="art.astro"></a>
       </div>
