--- a/src/style/style.css
+++ b/src/style/style.css
@@ -20,7 +20,7 @@
 
 body {
   background: #010d25;
-  background-image:url(/public/img/baggrundimgab.webp);
+  background-image:url(/img/baggrundimgab.webp);
   background-size: 100%;
 
 }
