build fejl rettet

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: inter;
-  src: url(/FONT/InterTight-ExtraBold.ttf);
+  src: url(/FONT/InterTight-Bold.ttf);
 }
 
 @font-face {
