--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,15 +3,14 @@
 ---
 
 <article>
-    <a href="../../public/IMG/kort.webp"></a>
+  <a href="../img/kort.webp"></a>
   <h2>Se årets program</h2>
   <p>Udforsk årets lysværker og events</p>
 </article>
 <style>
-  .grid{
-    
+  .grid {
   }
-  p{
+  p {
     text-align: center;
   }
 </style>
