fixet fejl i build css

--- a/src/components/Event.astro
+++ b/src/components/Event.astro
@@ -15,7 +15,7 @@ const { Tittel, Av, Lokation, img } = Astro.props;
 <style>
   .grid {
     display: grid;
-    grid-template-columns: ( 1fr 1fr 1fr);
+    grid-template-columns: (1fr 1fr 1fr);
   }
 
   h1 {
@@ -32,10 +32,9 @@ const { Tittel, Av, Lokation, img } = Astro.props;
     line-height: 2;
   }
 
-  p  {
+  p {
     color: #b2b8eb;
     font-family: RobR;
-    line-
-    height: 2;
+    line-height: 2;
   }
 </style>
