move items, så jeg ikke undgår fejl forhåbentlig

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -95,7 +95,7 @@
   #navigation.active ul {
     text-align: start;
     background-color: #fff8d2;
-    background-image: url(/public/img/menubaggrund.svg);
+    background-image: url(/public/menubaggrund.svg);
     width: 300px;
     height: 1000px;
     display: flex;
