--- a/src/style/index.css
+++ b/src/style/index.css
@@ -78,7 +78,7 @@ h1 {
 
 .body-index {
   background: #010d25;
-  background-image: url(/public/img/baggrund2.webp);
+  background-image: url(/public/baggrund2.webp);
   background-size: 100%;
 }
 /* desktop */
