--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import "../style/index.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
-import Button from "../components/Button.astro";
+import Button from "../Button.astro";
 ---
 
 <html lang="en">
